# topic_modeling

./: .gitignore  README.md  config.py  main.py  pyproject.toml  query.txt  topic_summaries.csv  trial_run.sh  troubleshooting_topics_open_ai.py
chroma/: chroma.sqlite3
chroma/9e015cfc-0049-4da8-95ae-eba324e0fff5/: index_metadata.pickle
chroma/e21d72ca-a1dc-425d-b013-5421536bf5eb/: index_metadata.pickle
chroma/f6f1b8e7-07d6-4d47-8e92-460fb6bd1a25/: index_metadata.pickle
data/: mtg_rules.txt
data/markdowns/: flowersforalgernon_markdown.md
email_targeting/: pyvenv.cfg
myenv/: pyvenv.cfg
outputs/: doc_topic_df.csv  topic_summaries.csv
src/: DEPR_topic_model_openai.py  topic_model.py  topics_spreadsheet.py  users.py
utils/: DEPR_topic_model.py  convert_to_md.py  create_database.py  gather_engagements.py  get_data.py  parse_excel.py  query_database.py  reader.py  topic_model.py  topic_model_DEPR.py  topic_model_direct.py  topic_model_direct_v0.py  topic_model_direct_v1.py  topic_model_openai.py  topics_spreadsheet.py
