[tool.poetry]
name = "email-targeting"
version = "0.1.0"
description = ""
authors = ["Noah Jaffe <noah.h.jaffe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.1"
openpyxl = "^3.1.2"
faiss-cpu = "^1.8.0"
bertopic = "^0.8.1"
torch = "1.10.2"
torchvision = "0.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]